view users page added

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -34,7 +34,7 @@
               <ul>
                 <li>
                   <span>View All Users</span>
-                  <a href="#"><img src="images/users.png"/></a>
+                  <a href="/admin/registeredUsers"><img src="images/users.png"/></a>
                 </li>
                 <li>
                   <span>Add a new User</span>
