--- a/views/users/passwordResetRequest.ejs
+++ b/views/users/passwordResetRequest.ejs
@@ -16,24 +16,19 @@
           </div>
         </div>
         <% } %>
+        <p class="text-center">Request Password Reset</p>
     </header>
 
     <!-- Begin page content -->
     <main role="main" class="container">
       <div class="container d-flex align-items-center justify-content-center" style="height:80vh;">
       <div class="bg-light border border-dark rounded w-50">
-        <form action="/users/login" class="mx-4 my-4" method="post">
+        <form action="/users/passwordResetRequest" class="mx-4 my-4" method="post">
           <div class="form-group">
             <label for="email">Email:</label>
             <input type="email" class='form-control w-100' name="email" id="email" placeholder="example@iitrpr.ac.in" required/>
           </div>
-          <div class="form-group">
-            <label for="password">Password:</label>
-            <input class="form-control w-100" type="password" name="password" id="password" placeholder="Password" required />
-          </div>
           <button class="btn btn-outline-primary" type="submit">Submit</button>
-          <hr>
-          <a href="/users/passwordResetRequest" class="text-decoration-none">Reset Password</span></a>
         </form>
         </div>
       </div>
