--- a/views/admin/registeredUsers.ejs
+++ b/views/admin/registeredUsers.ejs
@@ -29,7 +29,7 @@
               <tr>
                 <th scope="col" onclick="w3.sortHTML('.table','.item', 'td:nth-child(1)')">Name <i class="fa fa-sort"></i></th>
                 <th scope="col" onclick="w3.sortHTML('.table','.item', 'td:nth-child(2)')">Email <i class="fa fa-sort"></i></th>
-                <!-- <th scope="col" onclick="w3.sortHTML('.table','.item', 'td:nth-child(3)')">Date Prepared <i class="fa fa-sort"></i></th> -->
+                <th scope="col" onclick="w3.sortHTML('.table','.item', 'td:nth-child(3)')">Admin <i class="fa fa-sort"></i></th>
                 <th scope="col">Delete</th>
               </tr>
             </thead>
@@ -38,6 +38,11 @@
               <tr class='item'>
                 <td><%=user.name %></td>
                 <td><%=user.email %></td>
+                <% if(user.isAdmin == true){ %>
+                    <td>Yes</td>
+                <% } else { %>
+                    <td>No</td>
+                <% } %>
                 <td><a href="/admin/deleteUser/<%= user._id %>" class="btn btn-outline-danger">Delete</a></td>
               </tr>
            <% }); %>
