--- a/views/users/resetPassword.ejs
+++ b/views/users/resetPassword.ejs
@@ -23,7 +23,7 @@
     <main role="main" class="container">
       <div class="container d-flex align-items-center justify-content-center" style="height:80vh;">
       <div class="bg-light border border-dark rounded w-50">
-        <form action="/users/passwordResetRequest" class="mx-4 my-4" method="post">
+        <form action="/users/passwordReset" class="mx-4 my-4" method="post">
           <div class="form-group">
             <label for="password">New Password</label>
             <input type="password" class='form-control w-100' name="password" id="password" placeholder="Password" required/>
@@ -32,13 +32,25 @@
             <label for="confirm_password">Confirm New Password</label>
             <input type="password" class='form-control w-100' name="confirm_password" id="confirm_password" placeholder="Confirm Password" required/>
           </div>
+          <div class="form-group d-none">
+            <input type="text" class="form-control" id="token" placeholder="" name="token" value="" >
+          </div>
+           <div class="form-group d-none">
+          <input type="text" class="form-control" id="id" placeholder="" name="id" value="" >
+          </div>
           <button class="btn btn-outline-primary" type="submit">Submit</button>
         </form>
         </div>
       </div>
     </main>
-    
+    <script>
+      const params = new URLSearchParams(window.location.search);
+      for (const param of params) {
+        // console.log(param)
+        document.querySelector(`#${param[0]}`).value = param[1];
+      }
+
+    </script>
     <%- include('../common/footer') %>
-    
   </body>
 </html>
