Add password validation

--- a/views/users/resetPassword.ejs
+++ b/views/users/resetPassword.ejs
@@ -23,7 +23,7 @@
     <main role="main" class="container">
       <div class="container d-flex align-items-center justify-content-center" style="height:80vh;">
       <div class="bg-light border border-dark rounded w-50">
-        <form action="/users/passwordReset" class="mx-4 my-4" method="post">
+        <form action="/users/passwordReset" class="mx-4 my-4" method="post" name = "pwform" onsubmit="return validation()">
           <div class="form-group">
             <label for="password">New Password</label>
             <input type="password" class='form-control w-100' name="password" id="password" placeholder="Password" required/>
@@ -40,6 +40,39 @@
           </div>
           <button class="btn btn-outline-primary" type="submit">Submit</button>
         </form>
+        <script>
+          function validation() {
+            let form = document.forms.pwform;
+            let pw = form.elements.password.value;
+            let confirm_pw = form.elements.confirm_password.value;
+            if (pw != confirm_pw) {
+              alert("Passwords do not match");
+              return false;
+            } else {
+              if (pw.length < 6) {
+                alert("Password should have atleast 6 characters");
+                return false;  
+              }
+              let count_lower = 0;
+              let count_upper = 0;
+              let count_digit = 0;
+              for (let i = 0 ; i < pw.length ; i++) {
+                if (pw[i] >= 'A' && pw[i] <= 'Z') {
+                  count_upper++;
+                } else if (pw[i] >= 'a' && pw[i] <= 'z') {
+                  count_lower++;
+                } else if (pw[i] >= '0' && pw[i] <= '9') {
+                  count_digit++;
+                }
+              }
+              if ((count_lower == 0) || (count_upper == 0) || (count_digit == 0)) {
+                alert("Password should have atleast 1 uppercase character, 1 lowercase character and 1 digit");
+                return false;  
+              }
+              return true;
+            }
+          }
+        </script>
         </div>
       </div>
     </main>
