--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -22,6 +22,7 @@
     <main role="main" class="container">
       <div class="container d-flex align-items-center justify-content-center" style="height:80vh;">
       <div class="bg-light border border-dark rounded w-50">
+        <p class="lead text-center">Login </p>
         <form action="/users/login" class="mx-4 my-4" method="post">
           <div class="form-group">
             <label for="email">Email:</label>
