--- a/views/users/passwordResetRequest.ejs
+++ b/views/users/passwordResetRequest.ejs
@@ -16,13 +16,14 @@
           </div>
         </div>
         <% } %>
-        <p class="text-center">Request Password Reset</p>
+        <!-- <p class="text-center">Request Password Reset</p> -->
     </header>
 
     <!-- Begin page content -->
     <main role="main" class="container">
       <div class="container d-flex align-items-center justify-content-center" style="height:80vh;">
       <div class="bg-light border border-dark rounded w-50">
+        <p class="lead text-center">Request Password Reset</p>
         <form action="/users/passwordResetRequest" class="mx-4 my-4" method="post">
           <div class="form-group">
             <label for="email">Email:</label>
