--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -14,14 +14,19 @@
           <div class="alert alert-info">
             <%= successFlash %>
           </div>
+          
         </div>
         <% } %>
     </header>
 
     <!-- Begin page content -->
     <main role="main" class="container">
+      <!-- <h3 class="lead text-center">
+        Add a New User to the System
+      </h3> -->
         <div class="container d-flex align-items-center justify-content-center" style="height:80vh;">
         <div class="bg-light border border-dark rounded w-50">
+          <p class="lead text-center">Add a New User </p>
           <form action="/users/register" class="mx-4 my-4" method="post">
             <div class="form-group">
               <label for="email">Email:</label>
@@ -30,6 +35,13 @@
             <div class="form-group">
               <label for="name">Name:</label>
               <input class="form-control w-100" type="text" name="name" id="name" placeholder="Name" required />
+            </div>
+            <div class="form-group">
+              <label for="isAdmin" class="bg-danger text-white">Make Admin?</label>
+              <select id="isAdmin" name="isAdmin" class="form-control">
+                <option selected value="false">No</option>
+                <option value="true" >Yes</option>
+              </select>
             </div>
             <button class="btn btn-outline-primary" type="submit">Submit</button>
           </form>
