--- a/views/admin/registeredUsers.ejs
+++ b/views/admin/registeredUsers.ejs
@@ -13,6 +13,13 @@
   <body>
     <header>
         <%- include('../common/navbar') %>
+        <% if(successFlash.length>0) { %>
+          <div class="container mt-1">
+            <div class="alert alert-info">
+              <%= successFlash %>
+            </div>
+          </div>
+          <% } %>
       </header>
 
     <!-- Begin page content -->
