help page updated

--- a/views/helpPage.ejs
+++ b/views/helpPage.ejs
@@ -39,7 +39,7 @@
         <br>
         <h1 class="font-weight-bold">Step 2</h1>
         <hr class="my-4">
-        <img style="width:100%" src="images/step2.png">
+        <img style="width:100%" src="images/options.png">
         <br>
         <br>
         <p class="lead">Click on the <b>Upload New PO</b> button.</p>
@@ -65,7 +65,7 @@
       <div class="jumbotron ">
         <h1 class="font-weight-bold" >Step 1</h1>
         <hr class="my-4">
-        <img style="width:100%" src="images/step2.png">
+        <img style="width:100%" src="images/options.png">
         <br>
         <br>
         <p class="lead">Click on the <b>View Saved PO button</b>.</p>
@@ -73,13 +73,99 @@
         <br>
         <h1 class="font-weight-bold">Step 2</h1>
         <hr class="my-4">
-        <img style="width:100%" src="images/step5.png">
+        <img style="width:100%" src="images/saved.png">
         <br>
         <br>
         <p class="lead">Click on the <b>View</b> button to open the PO and on the <b>Edit</b> button to continue working on that PO.</p>
-        
       </div>
       <br>
+      <h2 class="font-weight-bold">Steps to Upload new POs in a batch</h2>
+      <br>
+      <div class="jumbotron ">
+        <h1 class="font-weight-bold" >Step 1</h1>
+        <hr class="my-4">
+        <img style="width:100%" src="images/options.png">
+        <br>
+        <br>
+        <p class="lead">Click on the <b>Batch Upload PO</b> button.</p>
+        <br>
+        <br>
+        <h1 class="font-weight-bold">Step 2</h1>
+        <hr class="my-4">
+        <img style="width:100%" src="images/batchUpload.png">
+        <br>
+        <br>
+        <p class="lead">Click on the <b>Upload Files</b> button to select the files, and then click on submit. The POs will be in the Saved POs page.</p>
+        <br>
+        <br>
+      </div>
+
+      <br>
+      <h2 class="font-weight-bold">Steps to Reset Password</h2>
+      <br>
+      <div class="jumbotron ">
+        <h1 class="font-weight-bold" >Step 1</h1>
+        <hr class="my-4">
+        <img style="width:60%;" src="images/resetPwd.png">
+        <br>
+        <br>
+        <p class="lead">Click on the <b>Reset Password</b> button on the login page.</p>
+        <br>
+        <br>
+        <h1 class="font-weight-bold">Step 2</h1>
+        <hr class="my-4">
+        <img style="width:70%;height:70%;" src="images/resetPwd2.png">
+        <br>
+        <br>
+        <p class="lead">Enter your IIT RPR Email ID. A password reset link will be sent to it, after clicking on it, you will be directed to the page below.</p>
+        <br>
+        <br>
+        <h1 class="font-weight-bold">Step 3</h1>
+        <hr class="my-4">
+        <img style="width:70%;height:80%;" src="images/resetPwd3.png">
+        <br>
+        <br>
+        <p class="lead">Enter and re-enter your password. The password should have 1 lowercase, 1 uppercase alphabet and 1 number, and should be atleast 8 characters long.</p>
+        <br>
+        <br>
+      </div>
+      
+      <h2 class="font-weight-bold">Admin Functions</h2>
+      <br>
+      <div class="jumbotron ">
+        <h1 class="font-weight-bold" >Viewing the Admin Dashboard</h1>
+        <hr class="my-4">
+        <img style="width:100%" src="images/admin.png">
+        <br>
+        <br>
+        <p class="lead">Click on the <b>Admin</b> button after logging in.</p>
+        <br>
+        <br>
+        <h1 class="font-weight-bold">Adding a new user</h1>
+        <hr class="my-4">
+        <img style="width:100%" src="images/adminFuncs.png">
+        <br>
+        <br>
+        <p class="lead">Click on the <b>Add a new user</b> button.</p>
+        <br>
+        <br>
+        <h1 class="font-weight-bold">Viewing all users </h1>
+        <hr class="my-4">
+        <img style="width:100%" src="images/adminFuncs.png">
+        <br>
+        <br>
+        <p class="lead">Click on the <b>View all users</b> button.</p>
+        <br>
+        <br>
+        <h1 class="font-weight-bold">Managing Users </h1>
+        <hr class="my-4">
+        <img style="width:100%" src="images/manage.png">
+        <br>
+        <br>
+        <p class="lead">Click on the <b>Edit</b> button to change the user's name or to change the user's admin access. Click on <b>Delete</b> to delete that particular user.</p>
+        <br>
+        <br>
+      </div>
       
 
       <!-- <div class="row">
