--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -37,6 +37,14 @@
               <input class="form-control w-100" type="text" name="name" id="name" placeholder="Name" required />
             </div>
             <div class="form-group">
+              <label for="googleSheetLink">Google Sheet Link:</label>
+              <input class="form-control w-100" type="url" name="googleSheetLink" id="googleSheetLink" placeholder="Sheet Link" required />
+            </div>
+            <div class="form-group">
+              <label for="driveFolderLink">Drive Folder Link:</label>
+              <input class="form-control w-100" type="url" name="driveFolderLink" id="driveFolderLink" placeholder="Drive Folder" required />
+            </div>
+            <div class="form-group">
               <label for="isAdmin" class="bg-danger text-white">Make Admin?</label>
               <select id="isAdmin" name="isAdmin" class="form-control">
                 <option selected value="false">No</option>
