--- a/views/common/navbar.ejs
+++ b/views/common/navbar.ejs
@@ -12,6 +12,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="/"> Home <span class="sr-only">(current)</span></a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/gem"> GeM PO <span class="sr-only">(current)</span></a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/help">Getting Started</a>
         </li>
