gem po upload page, pdf parser added

--- a/views/confirmationPage.ejs
+++ b/views/confirmationPage.ejs
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-md-5 order-md-2 mb-4">
                 <h4 class="mb-3">Preview</h4>
-                <iframe src="/uploads/<%= formData.fileName %>" class='w-100 h-75 my-4 sticky-top'></iframe>
+                <iframe src="/uploads/gemUploads/<%= formData.fileName %>" class='w-100 h-75 my-4 sticky-top'></iframe>
                 
             </div>
             <div class="col-md-7 order-md-1">
