--- a/views/gem/index.ejs
+++ b/views/gem/index.ejs
@@ -38,7 +38,7 @@
             </li>
             <li>
               <span>View Saved GEM PO</span>
-              <a href="/gem/savedPOPage"><img src="images/dv.png"/></a>
+              <a href="/gem/gemSavedPOPage"><img src="images/dv.png"/></a>
             </li>
           </ul>
         </div>
