--- a/views/gem/gemSavedPO.ejs
+++ b/views/gem/gemSavedPO.ejs
@@ -50,7 +50,7 @@
                 <!-- <th scope="row">1</th> -->
                 <td><%=po.serialNo %></td>
                 <td><%=po.indentNo %></td>
-                <td><%=po.datePrepared %></td>
+                <td><%=po.sanctionDate %></td>
                 <td><%=po.fileNo %></td>
                 <td><button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#exampleModal" data-whatever="<%= po.fileName %>"><i class="fa fa-eye"></i></button></td>
                 <td><a class="btn btn-outline-primary" href="/gem/gemConfirmationPage/<%= po._id %>"><i class="fa fa-edit"></i></a></td>
